mobile horizontal scroll fix

--- a/style.css
+++ b/style.css
@@ -18,9 +18,18 @@
   font-family: "gilroy";
   box-sizing: border-box;
 }
-body {
-  /* overflow: hidden; */
+/* body {
+
   overflow-x: hidden;
+  max-width: 100%;
+  position: relative;
+} */
+html,
+body {
+  overflow-x: hidden;
+}
+body {
+  position: relative;
 }
 #main {
   width: 100%;
@@ -535,7 +544,7 @@ body {
 
   /*FOOTER*/
   #footer {
-    padding-top: 2vh !important;
+    padding-top: 8vh !important;
     min-height: 35vh !important;
   }
   .footertitle h1 {
@@ -1238,6 +1247,7 @@ body {
   padding-bottom: 15vh;
   position: relative; /* in order to see it*/
   width: 100%;
+  height: 110vh;
   min-height: 80vh;
   background-color: lightseagreen;
   align-items: center;
